Fix collapse
SV-32097

--- a/packages/envision/src/scss/collapse.scss
+++ b/packages/envision/src/scss/collapse.scss
@@ -1,5 +1,5 @@
 .#{$prefix}-collapse {
-   html:not(.sv-no-js) & {
+   html:not(.sv-no-js) &:not(.#{$prefix}-collapse--show) {
       display: none;
    }
 
